--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <h1>Hi there <span class="material-symbols-outlined">waving_hand</span></h1>
             <h1>I'm Bhat Owais  <a href="https://linkedin.com/in/ovaixe"><i class="fa-brands fa-linkedin"></i></a> <a href="https://github.com/ovaixe"><i class="fa-brands fa-github"></i></a> <a href="https://twitter.com/ovaixe"><i class="fa-brands fa-twitter"></i></a></h1>
         </div>
+
+        <div class="res">
+            <embed src="resume.pdf" type="image/jpg">
+        </div>
     </div>
 </body>
 </html>
