--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="res">
-            <embed src="resume.pdf" type="image/jpg">
+            <embed src="resume.pdf">
         </div>
     </div>
 </body>
