--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="res">
-            <embed src="resume.pdf" type="application/pdf" width="80%" height="400px">
+            <embed src="resume.pdf" type="application/pdf" width="400px" height="400px">
         </div>
     </div>
 </body>
