--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <!-- google icons -->
-    <script src="https://kit.fontawesome.com/495f9bb100.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/495f9bb100.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- icon -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="index.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>ovaixe</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <img src="ovi.jpg" alt="ovaixe" class="responsive">
-        <div class="header">
-            <h1>Hi there <span class="material-symbols-outlined">waving_hand</span></h1>
-            <h1>I'm Bhat Owais  <a href="https://linkedin.com/in/ovaixe"><i class="fa-brands fa-linkedin"></i></a> <a href="https://github.com/ovaixe"><i class="fa-brands fa-github"></i></a> <a href="https://twitter.com/ovaixe"><i class="fa-brands fa-twitter"></i></a></h1>
-        </div>
+      <img src="ovi.jpg" alt="ovaixe" class="responsive" />
+      <div class="header">
+        <h1>
+          Hi there <span class="material-symbols-outlined">waving_hand</span>
+        </h1>
+        <h1>
+          I'm Bhat Owais
+          <a href="https://linkedin.com/in/ovaixe"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/ovaixe"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://twitter.com/ovaixe"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </h1>
+      </div>
 
-        <div class="res">
-            <embed src="resume.pdf" type="application/pdf" width="100px" height="100px">
-        </div>
+      <div class="res">
+        <embed src="resume.pdf" type="application/pdf" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
