--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="res">
-        <embed src="resume.pdf" type="application/pdf" />
+        <embed src="resume.pdf" />
       </div>
     </div>
   </body>
