--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="res">
-        <embed class="pdf" src="resume.pdf" />
+        <iframe class="pdf" src="resume.pdf" width="400px" height="400px"></iframe>
       </div>
     </div>
   </body>
