--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="res">
-        <iframe class="pdf" src="resume.pdf" width="100%" height="500px"></iframe>
+        <iframe src="resume.pdf" width="100%" height="500px"></iframe>
       </div>
     </div>
   </body>
