--- a/index.html
+++ b/index.html
@@ -26,28 +26,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="ovi.jpg" alt="ovaixe" class="responsive" />
-      <div class="header">
-        <h1>
-          Hi there <span class="material-symbols-outlined">waving_hand</span>
-        </h1>
-        <h1>
-          I'm Bhat Owais
-          <a href="https://linkedin.com/in/ovaixe"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-          <a href="https://github.com/ovaixe"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-          <a href="https://twitter.com/ovaixe"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
-        </h1>
-      </div>
-
-      <div class="res">
-        <iframe src="resume.pdf" width="100%" height="500px"></iframe>
-      </div>
+        <iframe src="resume.pdf" width="1200px" height="1200px"></iframe>
     </div>
   </body>
 </html>
